--- a/studentapp/templates/studentapp/dept.html
+++ b/studentapp/templates/studentapp/dept.html
@@ -5,7 +5,7 @@
     <title>Department list</title>
 </head>
 <body>
-<a href=" " >ECE</a><br>
+<a href="{% url "studentapp:ece" %} " >ECE</a><br>
 <a href=" " >EEE</a><br>
 <a href=" " >CSE</a><br>
 </body>
