--- a/studentapp/templates/studentapp/ece.html
+++ b/studentapp/templates/studentapp/ece.html
@@ -5,12 +5,13 @@
     <title>ECE Students List</title>
 </head>
 <body>
+<form method="get">
 {% if data %}
       name : {{ data.name }} <br>
       email : {{ data.email }}<br>
       department : {{ data.department }}<br>
       mobile: {{ data.mobile }}<br>
 {% endif %}
-
+</form>
 </body>
 </html>
