--- a/studentapp/templates/studentapp/dept.html
+++ b/studentapp/templates/studentapp/dept.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="{% url "studentapp:ece" %} " >ECE</a><br>
-<a href=" " >EEE</a><br>
-<a href=" " >CSE</a><br>
+<a href="{% url "studentapp:eee" %} " >EEE</a><br>
+<a href="{% url "studentapp:cse" %}" >CSE</a><br>
 </body>
 </html>
